# libertai-telegram-bot

./: .env.example  .gitignore  LICENSE  README.md  agent.yaml  mypy.ini  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci.yaml
old_src/agent/: __init__.py
old_src/agent/tools/: schema.py  utils.py
scripts/: dev.sh  run.sh
src/: bot.py  config.py  database.py  logger.py  main.py
src/agent/tools/: executor.py  functions.py  utils.py
src/commands/: __init__.py  clear.py  help.py  message.py
src/tools/: __init__.py  citizens.py  finance.py  knowledgebase.py
src/utils/: database.py  logger.py  telegram.py
templates/: system.yaml
