[tool.poetry]
name = "libertai-telegram-bot"
version = "0.1.0"
description = ""
authors = ["LibertAI team <hello@libertai.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
libertai-agents = {path = "../libertai-agents/libertai_agents", develop = true}
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
greenlet = "^3.1.1"
pytelegrambotapi = "^4.25.0"
yfinance = "^0.2.51"
pypdf2 = "^3.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = "^0.6.0"

[tool.ruff]
lint.select = ["C", "E", "F", "I", "W"]
lint.ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
